update Eclipse Collections 7.1.0 to 8.0.0-M1. and refactaring codes.